infer/tests/codetoanalyze/c/errors/enumeration/other_enum.c
../../frontend/enumeration/other_enum.c